@@ -1,3 +1,10 @@
+2017-01-20  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/physics/metrology.py:
+
+	Started module with metrological functions.  Has soft dependency on
+	sympy.
+
 2017-01-16  Lukas Kluft  <lukas.kluft@gmail.com>
 
 	* typhon/arts/griddedfield.py:
